# Noctyra

./: .gitignore  .gitmodules  contributing.md  license-exceptions.md  license.txt  meson.build  readme.md
example/: main.c
include/: color.h  noctyra2d.h  quad.h  renderer.h  sprite.h  texture.h  utils.h  vec.h  window.h
shaders/: fragment1.glsl  vertex1.glsl
src/: quad.c  renderer.c  sprite.c  texture.c  vec.c  window.c
